--- a/build.gradle
+++ b/build.gradle
@@ -28,12 +28,13 @@ test {
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass.set("wooper.Wooper")
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "wooper"
     archiveClassifier = null
+    archiveFileName = "wooper.jar"
 }
 
 run{
